Flesh out implementation, implement stream interfaces, drop browserify

--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "typescript": "^2.5.3",
     "tslint": "^5.9.1",
     "web-ext": "^1.8.1",
-    "browserify": "^14.5.0",
     "promised-neovim-client": "^2.0.2"
   },
   "scripts": {
-    "build": "((cargo build --release && (unlink ~/bin/firenvim ; cp target/release/firenvim ~/bin)) & tsc && browserify target/*.js -o target/background.js && cp src/manifest.json target/manifest.json && cp src/native_manifest.json $HOME/.mozilla/native-messaging-hosts/firenvim.json) || true",
+    "build": "((cargo build --release && (unlink ~/bin/firenvim ; cp target/release/firenvim ~/bin)) & tsc --out target/background.js && cp src/manifest.json target/manifest.json && cp src/native_manifest.json $HOME/.mozilla/native-messaging-hosts/firenvim.json) || true",
     "run": "web-ext run --source-dir=./target --keep-profile-changes --firefox-profile=$HOME/.mozilla/firefox/firenvim.profile",
     "package": "web-ext target",
     "clean": "rm -rf target"
