Move to webpack, use node's Stream for stdin/out, make msg JSON

--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "A webextension to turn Firefox into a Neovim client.",
   "devDependencies": {
     "@types/node": "^8.0.46",
-    "typescript": "^2.5.3",
+    "awesome-typescript-loader": "^3.2.3",
+    "copy-webpack-plugin": "^4.2.0",
+    "promised-neovim-client": "^2.0.2",
     "tslint": "^5.9.1",
+    "typescript": "^2.5.3",
     "web-ext": "^1.8.1",
-    "promised-neovim-client": "^2.0.2"
+    "webpack": "^3.8.1"
   },
   "scripts": {
-    "build": "((cargo build --release && (unlink ~/bin/firenvim ; cp target/release/firenvim ~/bin)) & tsc --out target/background.js && cp src/manifest.json target/manifest.json && cp src/native_manifest.json $HOME/.mozilla/native-messaging-hosts/firenvim.json) || true",
+    "build": "((cargo build --release && (unlink ~/bin/firenvim ; cp target/release/firenvim ~/bin)) & webpack && cp src/native_manifest.json $HOME/.mozilla/native-messaging-hosts/firenvim.json && tslint --fix --project .) || true",
     "run": "web-ext run --source-dir=./target --keep-profile-changes --firefox-profile=$HOME/.mozilla/firefox/firenvim.profile",
     "package": "web-ext target",
     "clean": "rm -rf target"
