Native messenger: automatically install if ran from command line

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ path = "native_src/main.rs"
 name = "firenvim"
 
 [dependencies]
+atty = "*"
 byteorder = "*"
+directories = "*"
 serde = "*"
 serde_derive = "*"
 serde_json = "*"
