--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@types/msgpack-lite": "^0.1.6",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "msgpack-lite": "^0.1.26",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "web-ext-types": "^3.1.0"
   }
 }
