--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "webpack-cli": "^3.2.3"
   },
   "scripts": {
-    "build": "tslint --fix --project . && webpack && cargo build --release && cargo run --release",
+    "build": "tslint --fix --project . && webpack && web-ext build --source-dir target/extension --artifacts-dir target/xpi --overwrite-dest",
+    "install": "nvim --headless -c ':set rtp+=.' -c 'call firenvim#install()' -c 'quit'",
     "clean": "rm -rf target"
   },
   "author": "glacambre",
