--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build": "tslint --fix --project . && webpack && web-ext build --source-dir target/extension --artifacts-dir target/xpi --overwrite-dest",
-    "install": "nvim --headless -c ':set rtp+=.' -c 'call firenvim#install()' -c 'quit'",
+    "install": "nvim --headless -c ':set rtp+=.' -c 'call firenvim#install()' -c 'quit' || true",
     "clean": "rm -rf target"
   },
   "author": "glacambre",
