--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.5",
   "description": "A webextension to turn Firefox into a Neovim client.",
   "devDependencies": {
-    "@types/node": "^12.0.7",
-    "awesome-typescript-loader": "^5.2.1",
-    "copy-webpack-plugin": "^5.0.0",
-    "tslint": "^5.13.1",
-    "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.3.3333",
-    "web-ext": "^3.0.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "@types/node": "12.0.7",
+    "awesome-typescript-loader": "5.2.1",
+    "copy-webpack-plugin": "5.0.0",
+    "tslint": "5.13.1",
+    "tslint-sonarts": "1.9.0",
+    "typescript": "3.3.3333",
+    "web-ext": "3.0.0",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.2.3"
   },
   "scripts": {
     "build": "tslint --fix --project . && webpack && web-ext build --source-dir target/extension --artifacts-dir target/xpi --overwrite-dest",
@@ -27,12 +27,12 @@
   ],
   "license": "GPL-3.0",
   "dependencies": {
-    "@types/msgpack-lite": "^0.1.6",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "msgpack-lite": "^0.1.26",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "web-ext-types": "^3.1.0"
+    "@types/msgpack-lite": "0.1.6",
+    "@types/react": "16.8.19",
+    "@types/react-dom": "16.8.4",
+    "msgpack-lite": "0.1.26",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "web-ext-types": "3.1.0"
   }
 }
