Allow disabling firenvim from its browserAction

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,7 +33,7 @@
   },
 
 
-  "permissions": ["nativeMessaging", "storage"],
+  "permissions": ["nativeMessaging", "sessions", "storage", "tabs"],
 
   "icons": {
     "48": "firenvim.svg"
