Remove "sessions" permission
The `sessions` permission was required in order to use Firefox's
`setTabValue` and `getTabValue`. Since Chrome doesn't support these
APIs, we replaced them with a less powerful, cross browser version we
implemented ourselves.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,7 +33,7 @@
   },
 
 
-  "permissions": ["nativeMessaging", "sessions", "storage", "tabs"],
+  "permissions": ["nativeMessaging", "storage", "tabs"],
 
   "icons": {
     "48": "firenvim.svg"
