--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ before_install:
   - mkdir -p "$HOME/.config/nvim/"
   - echo "set rtp+=$(pwd)" >> "$HOME/.config/nvim/init.vim"
 install:
-  - npm install
+  - npm ci
   - npm run build
   - npm run install_manifests
+  - cat "$HOME/.local/share/firenvim/firenvim"
 cache:
   directories:
     - node_modules
