--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ os:
   - linux
   - osx
 node_js:
-  - 10.15
+  - 12.6.0
 before_install:
+  - npm install -g npm
   - npm install -g get-firefox
   - if [ $TRAVIS_OS_NAME = linux ]; then get-firefox --platform linux --branch devedition --extract --target $HOME; export PATH="$HOME/firefox:$PATH" ; mkdir -p "$HOME/bin" ; curl -L https://github.com/neovim/neovim/releases/download/nightly/nvim.appimage -o "$HOME/bin/nvim" ; chmod u+x "$HOME/bin/nvim"; export PATH="$HOME/bin:$PATH"; fi
   - if [ $TRAVIS_OS_NAME = osx ]; then curl -LO https://github.com/neovim/neovim/releases/download/nightly/nvim-macos.tar.gz; tar xzf nvim-macos.tar.gz; export PATH="$(pwd)/nvim-osx64/bin/:$PATH"; brew cask --verbose --debug install homebrew/cask-versions/firefox-developer-edition; export PATH="/Applications/Firefox Developer Edition.app/Contents/MacOS/:$PATH"; fi
