tests: Make ace/codemirror/monaco local
This makes tests more reliable as CI servers sometimes have flaky
internet connections.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "@types/jest": "24.0.23",
     "@types/msgpack-lite": "0.1.7",
     "@types/node": "12.12.12",
+    "ace-builds": "^1.4.7",
     "awesome-typescript-loader": "5.2.1",
     "chromedriver": "78.0.1",
+    "codemirror": "^5.49.2",
     "copy-webpack-plugin": "5.0.5",
     "geckodriver": "1.19.1",
     "jest": "24.9.0",
+    "monaco-editor": "^0.18.1",
     "msgpack-lite": "0.1.26",
     "selenium-webdriver": "4.0.0-alpha.5",
     "ts-jest": "24.2.0",
