--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,6 +19,12 @@
     },
     "toggle_firenvim": {
       "description": "Toggle Firenvim in the current tab."
+    },
+    "focus_input": {
+      "description": "Focus the input field that matches the currently focused iframe."
+    },
+    "focus_page": {
+      "description": "Focus the page."
     }
   },
 
