--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ environment:
   HEADLESS: 1
   APPVEYOR: 1
 install:
-  - ps: Install-Product node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version x64
   - npm install -g npm
   - choco --version
   - choco install firefox-dev --pre
