--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "monaco-editor": "^0.19.3",
     "msgpack-lite": "0.1.26",
     "selenium-webdriver": "4.0.0-alpha.5",
+    "sharp": "0.24.0",
     "ts-jest": "25.0.0",
     "tslint": "5.20.1",
     "tslint-sonarts": "1.9.0",
