Update extension manifest
These are random changes that I hope will fix whatever the chrome web
sotre dislikes about new Firenvim releases.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,6 +10,8 @@
     "default_popup": "browserAction.html"
   },
 
+  BROWSER_SPECIFIC_SETTINGS,
+
   "commands": {
     "nvimify": {
       "suggested_key": {
@@ -54,7 +56,5 @@
 
   "version": "FIRENVIM_VERSION",
 
-  "web_accessible_resources": ["NeovimFrame.html", "ISSUE_TEMPLATE.md"],
-
-  BROWSER_SPECIFIC_SETTINGS
+  "web_accessible_resources": ["NeovimFrame.html", "ISSUE_TEMPLATE.md"]
 }
