--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 env:
-  - HEADLESS=1
+  global:
+    - HEADLESS=1
+  jobs:
+    - NEOVIMVERSION=nightly
+    - NEOVIMVERSION=stable
 os:
   - linux
   - osx
@@ -8,9 +12,8 @@ node_js:
   - 12.6.0
 before_install:
   - npm install -g npm
-  - npm install -g get-firefox
-  - if [ $TRAVIS_OS_NAME = linux ]; then get-firefox --platform linux --branch devedition --extract --target $HOME; export PATH="$HOME/firefox:$PATH" ; mkdir -p "$HOME/bin" ; curl -L https://github.com/neovim/neovim/releases/download/nightly/nvim.appimage -o "$HOME/bin/nvim" ; chmod u+x "$HOME/bin/nvim"; export PATH="$HOME/bin:$PATH"; fi
-  - if [ $TRAVIS_OS_NAME = osx ]; then curl -LO https://github.com/neovim/neovim/releases/download/nightly/nvim-macos.tar.gz; tar xzf nvim-macos.tar.gz; export PATH="$(pwd)/nvim-osx64/bin/:$PATH"; brew cask --verbose --debug install homebrew/cask-versions/firefox-developer-edition; export PATH="/Applications/Firefox Developer Edition.app/Contents/MacOS/:$PATH"; fi
+  - if [ $TRAVIS_OS_NAME = linux ]; then npm install -g get-firefox; get-firefox --platform linux --branch devedition --extract --target $HOME; export PATH="$HOME/firefox:$PATH" ; mkdir -p "$HOME/bin" ; echo "Downloading $NEOVIMVERSION"; curl -L https://github.com/neovim/neovim/releases/download/$NEOVIMVERSION/nvim.appimage -o "$HOME/bin/nvim" ; chmod u+x "$HOME/bin/nvim"; export PATH="$HOME/bin:$PATH"; fi
+  - if [ $TRAVIS_OS_NAME = osx ]; then curl -LO https://github.com/neovim/neovim/releases/download/$NEOVIMVERSION/nvim-macos.tar.gz; tar xzf nvim-macos.tar.gz; export PATH="$(pwd)/nvim-osx64/bin/:$PATH"; brew cask --verbose --debug install homebrew/cask-versions/firefox-developer-edition; export PATH="/Applications/Firefox Developer Edition.app/Contents/MacOS/:$PATH"; fi
   - firefox --version
   - nvim --version
   - mkdir -p "$HOME/.config/nvim/"
