Make source manifest look exactly like manifest from chrome store

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,60 +1,45 @@
 {
-  "background": {
-    "scripts": ["background.js"]
-  },
-
-  "browser_action": {
-    "browser_style": true,
-    "default_icon": "firenvim.svg",
-    "default_title": "Firenvim",
-    "default_popup": "browserAction.html"
-  },
-
-  BROWSER_SPECIFIC_SETTINGS,
-
-  "commands": {
-    "nvimify": {
-      "suggested_key": {
-        "default": "Ctrl+E"
+   "background": {
+      "scripts": [ "background.js" ]
+   },
+   "browser_action": {
+      "browser_style": true,
+      "default_icon": "firenvim.svg",
+      "default_popup": "browserAction.html",
+      "default_title": "Firenvim"
+   },
+   "commands": {
+      "focus_input": {
+         "description": "Focus the input field that matches the currently focused iframe."
       },
-      "description": "Turn the currently focused element into a neovim iframe."
-    },
-    "toggle_firenvim": {
-      "description": "Toggle Firenvim in the current tab."
-    },
-    "focus_input": {
-      "description": "Focus the input field that matches the currently focused iframe."
-    },
-    "focus_page": {
-      "description": "Focus the page."
-    }
-  },
-
-  "content_scripts": [
-    {
+      "focus_page": {
+         "description": "Focus the page."
+      },
+      "nvimify": {
+         "description": "Turn the currently focused element into a neovim iframe.",
+         "suggested_key": {
+            "default": "Ctrl+E"
+         }
+      },
+      "toggle_firenvim": {
+         "description": "Toggle Firenvim in the current tab."
+      }
+   },
+   "content_scripts": [ {
       "all_frames": true,
-      "js": ["content.js"],
-      "matches": [
-        "<all_urls>"
-      ],
+      "js": [ "content.js" ],
       "match_about_blank": true,
+      "matches": [ "<all_urls>" ],
       "run_at": "document_start"
-    }
-  ],
-
-  "description": "PACKAGE_JSON_DESCRIPTION",
-
-  "icons": {
-    "128": "firenvim.svg"
-  },
-
-  "manifest_version": 2,
-
-  "name": "Firenvim",
-
-  "permissions": ["nativeMessaging", "storage", "tabs"],
-
-  "version": "FIRENVIM_VERSION",
-
-  "web_accessible_resources": ["NeovimFrame.html", "ISSUE_TEMPLATE.md"]
+   } ],
+   "description": "PACKAGE_JSON_DESCRIPTION",
+   "icons": {
+      "128": "firenvim.svg"
+   },
+   BROWSER_SPECIFIC_SETTINGS,
+   "manifest_version": 2,
+   "name": "Firenvim",
+   "permissions": [ "nativeMessaging", "storage", "tabs" ],
+   "version": "FIRENVIM_VERSION",
+   "web_accessible_resources": [ "NeovimFrame.html", "ISSUE_TEMPLATE.md" ]
 }
