Github actions: don't run vint twice for a PR

--- a/.github/workflows/vint.yml
+++ b/.github/workflows/vint.yml
@@ -1,6 +1,12 @@
 name: Vint
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
 
 jobs:
   vint:
