--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build": "tslint --fix --project . && webpack && web-ext build --source-dir target/firefox --artifacts-dir target/xpi --overwrite-dest",
     "clean": "rm -rf target",
     "install_manifests": "nvim --headless -u NORC -i NONE -n -c \":set rtp+=.\" -c \"call firenvim#install(1)\" -c \"quit\"",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "jest": {
     "testRegex": "/tests/[^_].*\\.(jsx?|tsx?)$",
